# LongMemEval

./: .gitignore  README.md  pyproject.toml
src/evaluation/: evaluate_qa_inspect.py  get_judge_prompt.py  metadata.py
src/evaluation/solvers/: in_context.py  mem0.py  prompt_utils.py  supermemory.py  zep.py
