[project]
name = "longmemeval"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "backoff",
    "mem0ai>=1.0.1",
    "nltk",
    "numpy",
    "openai",
    "openbench>=0.5.2",
    "packaging",
    "tqdm",
    "zep-cloud>=3.13.0",
]

[project.entry-points."openbench.benchmarks"]
longmemeval = "evaluation.metadata:get_benchmark_suite"
